--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@quasar/quasar-app-extension-qmarkdown",
-  "version": "1.0.0-alpha.8",
-  "description": "A Quasar UI Extension to display inline markdown",
+  "version": "1.0.0-beta.1",
+  "description": "A Quasar UI App Extension to display inline markdown",
   "author": "Hawkeye64 <jeff@quasar-framework.org>",
   "main": "src/index.js",
   "scripts": {
