--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "markdown-it-sup": "^1.0.0",
     "markdown-it-task-lists": "^2.1.1",
     "markdown-it-toc-and-anchor": "^4.2.0",
-    "prismjs": "^1.16.0"
+    "prismjs": "^1.16.0",
+    "raw-loader": "^2.0.0"
   },
   "devDependencies": {
     "@vue/eslint-config-standard": "^4.0.0",
