--- a/demo/package.json
+++ b/demo/package.json
@@ -2,7 +2,7 @@
   "name": "quasar-app-extension-qmarkdown",
   "version": "0.0.1",
   "description": "A Quasar Framework app for QMarkdown",
-  "productName": "Quasar App",
+  "productName": "QMarkdown demo app",
   "cordovaId": "org.cordova.quasar.app",
   "author": "Jeff Galbraith <jeff.galbraith@xendra.com>",
   "private": true,
@@ -11,11 +11,11 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "@quasar/extras": "^1.1.1",
-    "quasar": "^1.0.0-beta.18"
+    "@quasar/extras": "^1.1.2",
+    "quasar": "^1.0.0-beta.20"
   },
   "devDependencies": {
-    "@quasar/app": "^1.0.0-beta.19",
+    "@quasar/app": "^1.0.0-beta.22",
     "@quasar/quasar-app-extension-qmarkdown": "link:../.",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
