--- a/demo/package.json
+++ b/demo/package.json
@@ -12,10 +12,10 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.1.2",
-    "quasar": "^1.0.0-beta.23"
+    "quasar": "^1.0.0-rc.2"
   },
   "devDependencies": {
-    "@quasar/app": "^1.0.0-beta.25",
+    "@quasar/app": "^1.0.0-rc.3",
     "@quasar/quasar-app-extension-qmarkdown": "link:../.",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
