--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@quasar/quasar-app-extension-qmarkdown",
   "version": "1.0.0-beta.8",
   "description": "Display inline markdown in your Quasar App",
-  "author": "Hawkeye64 <jeff@quasar-framework.org>",
+  "author": "Hawkeye64 <jeff@quasar.dev>",
   "main": "src/index.js",
   "scripts": {
     "lint": "eslint --ext .js,.vue src",
