chore: ignore dist folder

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 .DS_Store
 .thumbs.db
 node_modules
-/dist
+dist
+demo/dist
 /src-cordova/node_modules
 /src-cordova/platforms
 /src-cordova/plugins
