--- a/demo/package.json
+++ b/demo/package.json
@@ -14,10 +14,10 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.1.4",
-    "quasar": "^1.0.0-rc.5"
+    "quasar": "^1.0.4"
   },
   "devDependencies": {
-    "@quasar/app": "^1.0.0-rc.7",
+    "@quasar/app": "^1.0.4",
     "@quasar/quasar-app-extension-qmarkdown": "link:../.",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.2",
