chore: add QAutomate to demo

--- a/demo/quasar.extensions.json
+++ b/demo/quasar.extensions.json
@@ -1,3 +1,7 @@
 {
-  "@quasar/qmarkdown": {}
+  "@quasar/qmarkdown": {},
+  "qautomate": {
+    "quasarConfFixMode": "automatic",
+    "sort": true
+  }
 }
