--- a/demo/package.json
+++ b/demo/package.json
@@ -23,7 +23,8 @@
     "babel-eslint": "^10.0.2",
     "eslint": "^6.1.0",
     "eslint-loader": "^2.2.1",
-    "eslint-plugin-vue": "^5.2.3"
+    "eslint-plugin-vue": "^5.2.3",
+    "quasar-app-extension-qautomate": "^1.0.0-alpha.5"
   },
   "engines": {
     "node": ">= 8.9.0",
