--- a/demo/package.json
+++ b/demo/package.json
@@ -23,6 +23,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.4.0",
     "eslint-loader": "^3.0.0",
+    "eslint-plugin-quasar": "^1.0.0-alpha.11",
     "eslint-plugin-vue": "^5.2.3",
     "quasar-app-extension-qautomate": "^1.0.0-alpha.5"
   },
