wip: next QMarkdown

--- a/ui/package.json
+++ b/ui/package.json
@@ -7,12 +7,14 @@
   "module": "dist/index.esm.js",
   "main": "dist/index.common.js",
   "scripts": {
-    "dev": "cd dev; yarn dev; cd ..",
+    "lint": "eslint --ext .js,.vue src",
+    "lint-fix": "eslint --ext .js,.vue src --fix",
+    "dev": "cd dev && yarn dev && cd ..",
     "dev:umd": "yarn build && node build/script.open-umd.js",
-    "dev:ssr": "cd dev; yarn 'dev:ssr'; cd ..",
-    "dev:ios": "cd dev; yarn 'dev:ios'; cd ..",
-    "dev:android": "cd dev; yarn 'dev:android'; cd ..",
-    "dev:electron": "cd dev; yarn 'dev:electron'; cd ..",
+    "dev:ssr": "cd dev && yarn 'dev:ssr' && cd ..",
+    "dev:ios": "cd dev && yarn 'dev:ios' && cd ..",
+    "dev:android": "cd dev && yarn 'dev:android' && cd ..",
+    "dev:electron": "cd dev && yarn 'dev:electron' && cd ..",
     "build": "node build/index.js",
     "build:js": "node build/script.javascript.js",
     "build:css": "node build/script.css.js"
