--- a/demo/package.json
+++ b/demo/package.json
@@ -24,7 +24,8 @@
     "eslint": "^6.7.0",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-quasar": "^1.0.0-alpha.17",
-    "eslint-plugin-vue": "^6.0.1"
+    "eslint-plugin-vue": "^6.0.1",
+    "raw-loader": "^3.1.0"
   },
   "engines": {
     "node": ">= 8.9.0",
