--- a/demo/package.json
+++ b/demo/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@quasar/app": "^1.2.4",
+    "@quasar/quasar-app-extension-qpublish": "^1.0.0-alpha.14",
     "@quasar/quasar-app-extension-qribbon": "^1.0.0-beta.11",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
