--- a/demo/package.json
+++ b/demo/package.json
@@ -19,14 +19,12 @@
   "devDependencies": {
     "@quasar/app": "^1.2.4",
     "@quasar/quasar-app-extension-qpublish": "^1.0.0-alpha.14",
-    "@quasar/quasar-app-extension-qribbon": "^1.0.0-beta.11",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.7.0",
+    "eslint": "^6.7.1",
     "eslint-loader": "^3.0.2",
-    "eslint-plugin-quasar": "^1.0.0-alpha.17",
-    "eslint-plugin-vue": "^6.0.1",
-    "raw-loader": "^3.1.0"
+    "eslint-plugin-quasar": "^1.0.0-alpha.11",
+    "eslint-plugin-vue": "^6.0.1"
   },
   "engines": {
     "node": ">= 8.9.0",
