--- a/app-extension/package.json
+++ b/app-extension/package.json
@@ -20,17 +20,17 @@
   "bugs": "https://github.com/quasarframework/quasar-ui-qmarkdown/issues",
   "homepage": "https://github.com/quasarframework/quasar-ui-qmarkdown",
   "dependencies": {
-    "front-matter": "^3.0.2",
-    "@quasar/quasar-ui-qmarkdown": "^1.0.1",
-    "raw-loader": "^4.0.0",
-    "ware-loader": "^0.2.4"
+    "@quasar/quasar-ui-qmarkdown": "^1.0.2"
   },
   "devDependencies": {
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.1",
     "eslint-loader": "^3.0.2",
-    "eslint-plugin-vue": "^6.0.1"
+    "eslint-plugin-vue": "^6.0.1",
+    "front-matter": "^3.0.2",
+    "raw-loader": "^4.0.0",
+    "ware-loader": "^0.2.4"
   },
   "keywords": [
     "quasar",
