--- a/demo/package.json
+++ b/demo/package.json
@@ -14,11 +14,10 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.3.3",
-    "quasar": "^1.4.5"
+    "quasar": "^1.5.0"
   },
   "devDependencies": {
     "@quasar/app": "^1.3.1",
-    "@quasar/quasar-app-extension-qpublish": "^1.0.0-alpha.14",
     "@quasar/quasar-app-extension-qribbon": "^1.0.0-beta.11",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
@@ -26,6 +25,7 @@
     "eslint-loader": "^3.0.2",
     "eslint-plugin-quasar": "^1.0.0-alpha.11",
     "eslint-plugin-vue": "^6.0.1",
+    "quasar-app-extension-json-api-viewer": "^0.0.6",
     "raw-loader": "^4.0.0"
   },
   "engines": {
