--- a/demo/package.json
+++ b/demo/package.json
@@ -14,16 +14,20 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.3.3",
-    "quasar": "^1.5.0"
+    "quasar": "^1.5.5"
   },
   "devDependencies": {
-    "@quasar/app": "^1.3.1",
-    "@quasar/quasar-app-extension-qribbon": "^1.0.0-beta.11",
-    "@vue/eslint-config-standard": "^4.0.0",
+    "@quasar/app": "^1.3.3",
+    "@quasar/quasar-app-extension-qribbon": "^1.0.0-beta.14",
+    "@vue/eslint-config-standard": "^5.0.1",
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.7.1",
-    "eslint-loader": "^3.0.2",
+    "eslint": "^6.7.2",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-quasar": "^1.0.0-alpha.11",
+    "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.0.1",
     "quasar-app-extension-json-api-viewer": "^0.0.8",
     "raw-loader": "^4.0.0"
