--- a/demo/package.json
+++ b/demo/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@quasar/app": "^1.3.3",
+    "@quasar/quasar-app-extension-qmarkdown": "^1.0.7",
     "@quasar/quasar-app-extension-qribbon": "^1.0.0-beta.14",
     "@vue/eslint-config-standard": "^5.0.1",
     "babel-eslint": "^10.0.3",
