chore(docs): update demo

--- a/demo/quasar.extensions.json
+++ b/demo/quasar.extensions.json
@@ -1,4 +1,8 @@
 {
   "@quasar/qribbon": {},
-  "json-api-viewer": {}
+  "json-api-viewer": {},
+  "@quasar/qmarkdown": {
+    "import_md": true,
+    "import_vmd": true
+  }
 }
