--- a/demo/package.json
+++ b/demo/package.json
@@ -14,11 +14,10 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.3.3",
-    "quasar": "^1.5.11"
+    "quasar": "^1.6.0"
   },
   "devDependencies": {
     "@quasar/app": "^1.4.3",
-    "@quasar/quasar-app-extension-qmarkdown": "^1.0.10",
     "@quasar/quasar-app-extension-qribbon": "^1.0.0-beta.14",
     "@vue/eslint-config-standard": "^5.0.1",
     "babel-eslint": "^10.0.3",
@@ -27,10 +26,11 @@
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-quasar": "^1.0.0-alpha.17",
+    "eslint-plugin-quasar": "^1.0.0-alpha.18",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^6.0.1",
-    "quasar-app-extension-json-api-viewer": "^1.0.0",
+    "eslint-plugin-vue": "^6.1.2",
+    "quasar-app-extension-example-viewer": "^0.0.10",
+    "quasar-app-extension-json-api-viewer": "^1.0.2",
     "raw-loader": "^4.0.0"
   },
   "engines": {
@@ -42,6 +42,7 @@
     "last 1 version, not dead, ie >= 11"
   ],
   "resolutions": {
-    "ajv": "6.10.2"
+    "ajv": "6.10.2",
+    "@babel/parser": "7.7.5"
   }
 }
