--- a/ui/package.json
+++ b/ui/package.json
@@ -53,15 +53,17 @@
     "markdown-it-sup": "^1.0.0",
     "markdown-it-task-lists": "^2.1.1",
     "markdown-it-toc-and-anchor": "^4.2.0",
-    "prismjs": "^1.18.0"
+    "prismjs": "^1.19.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.3",
     "@rollup/plugin-buble": "^0.21.0",
     "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-json": "^4.0.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@vue/eslint-config-standard": "^5.1.0",
-    "autoprefixer": "^9.7.3",
+    "autoprefixer": "^9.7.4",
+    "babel-preset-env": "^1.7.0",
     "chalk": "^3.0.0",
     "cssnano": "^4.1.10",
     "eslint": "^6.8.0",
@@ -73,14 +75,15 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.1.2",
     "fs-extra": "^8.1.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "open": "^7.0.0",
     "postcss": "^7.0.26",
     "postcss-rtl": "^1.5.0",
-    "quasar": "^1.7.0",
+    "quasar": "^1.7.4",
     "quasar-json-api": "^0.0.19",
     "rimraf": "^3.0.0",
     "rollup": "^1.29.0",
+    "rollup-plugin-babel": "^4.3.3",
     "uglify-es": "^3.3.9",
     "zlib": "^1.0.5"
   },
