--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quasar/quasar-ui-qmarkdown",
-  "version": "1.0.16",
+  "version": "1.0.20",
   "author": "Jeff Galbraith <jeff@quasar.dev>",
   "description": "Display inline markdown in your Quasar App",
   "license": "MIT",
@@ -63,6 +63,7 @@
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@vue/eslint-config-standard": "^5.1.0",
     "autoprefixer": "^9.7.4",
+    "babel-eslint": "^10.0.3",
     "babel-preset-env": "^1.7.0",
     "chalk": "^3.0.0",
     "cssnano": "^4.1.10",
