--- a/demo/package.json
+++ b/demo/package.json
@@ -21,6 +21,10 @@
     "@quasar/quasar-app-extension-qribbon": "^1.0.0-beta.14",
     "@vue/eslint-config-standard": "^5.1.0",
     "babel-eslint": "^10.0.3",
+    "devtron": "^1.4.0",
+    "electron": "^7.0.0",
+    "electron-debug": "^3.0.0",
+    "electron-devtools-installer": "^2.2.4",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.20.0",
