--- a/ui/package.json
+++ b/ui/package.json
@@ -60,7 +60,7 @@
     "prismjs": "^1.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
+    "@babel/core": "^7.10.0",
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-json": "^4.0.3",
@@ -71,23 +71,23 @@
     "babel-preset-env": "^1.7.0",
     "chalk": "^4.0.0",
     "cssnano": "^4.1.10",
-    "eslint": "^7.0.0",
+    "eslint": "^7.1.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-quasar": "^1.0.0-alpha.18",
+    "eslint-plugin-quasar": "^1.0.0",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
     "fs-extra": "^9.0.0",
     "node-sass": "^4.14.1",
     "open": "^7.0.4",
-    "postcss": "^7.0.30",
+    "postcss": "^7.0.31",
     "postcss-rtl": "^1.7.3",
     "quasar": "^1.11.3",
     "quasar-json-api": "^0.0.21",
     "rimraf": "^3.0.2",
-    "rollup": "^2.10.7",
+    "rollup": "^2.10.9",
     "rollup-plugin-babel": "^4.4.0",
     "uglify-es": "^3.3.9",
     "zlib": "^1.0.5"
