--- a/ui/package.json
+++ b/ui/package.json
@@ -58,14 +58,16 @@
     "prismjs": "^1.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@rollup/plugin-babel": "^5.0.4",
+    "@babel/core": "^7.10.5",
+    "@rollup/plugin-babel": "^5.1.0",
     "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-inject": "^4.0.2",
     "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-legacy": "^2.0.0",
     "@rollup/plugin-multi-entry": "^3.0.1",
-    "@rollup/plugin-node-resolve": "^8.1.0",
-    "autoprefixer": "^9.8.4",
+    "@rollup/plugin-node-resolve": "^8.4.0",
+    "autoprefixer": "^9.8.5",
     "babel-eslint": "^10.1.0",
     "babel-preset-env": "^1.7.0",
     "chalk": "^4.1.0",
@@ -73,15 +75,14 @@
     "eslint-plugin-nodeca": "^1.0.3",
     "fs-extra": "^9.0.1",
     "node-sass": "^4.14.1",
-    "open": "^7.0.4",
+    "open": "^7.1.0",
     "postcss": "^7.0.32",
     "postcss-rtl": "^1.7.3",
     "punycode": "^2.1.1",
-    "quasar": "^1.12.8",
+    "quasar": "^1.12.13",
     "quasar-json-api": "^0.0.21",
     "rimraf": "^3.0.2",
-    "rollup": "^2.19.0",
-    "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup": "^2.22.2",
     "uglify-es": "^3.3.9",
     "zlib": "^1.0.5"
   },
