--- a/ui/package.json
+++ b/ui/package.json
@@ -7,6 +7,8 @@
   "module": "dist/index.esm.js",
   "main": "dist/index.common.js",
   "scripts": {
+    "lint": "eslint --ext .js,.vue src",
+    "lint-fix": "eslint --ext .js,.vue src --fix",
     "dev": "cd dev && yarn dev && cd ..",
     "dev:umd": "yarn build && node build/script.open-umd.js",
     "dev:ssr": "cd dev && yarn 'dev:ssr' && cd ..",
@@ -41,10 +43,10 @@
     "attributes": "dist/vetur/attributes.json"
   },
   "dependencies": {
-    "markdown-it": "^11.0.0",
+    "markdown-it": "^11.0.1",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-container": "^3.0.0",
-    "markdown-it-deflist": "^2.0.3",
+    "markdown-it-deflist": "^2.1.0",
     "markdown-it-emoji": "^1.4.0",
     "markdown-it-footnote": "^3.0.2",
     "markdown-it-imsize": "^2.0.1",
@@ -57,10 +59,10 @@
     "prismjs": "^1.21.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@rollup/plugin-babel": "^5.2.0",
+    "@babel/core": "^7.11.6",
+    "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-inject": "^4.0.2",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-legacy": "^2.0.0",
@@ -74,14 +76,14 @@
     "eslint-plugin-nodeca": "^1.0.3",
     "fs-extra": "^9.0.1",
     "node-sass": "^4.14.1",
-    "open": "^7.1.0",
+    "open": "^7.3.0",
     "postcss": "^7.0.32",
     "postcss-rtl": "^1.7.3",
     "punycode": "^2.1.1",
-    "quasar": "^1.12.13",
-    "quasar-json-api": "^0.0.21",
+    "quasar": "^1.14.0",
+    "quasar-json-api": "^1.0.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.26.2",
+    "rollup": "^2.28.2",
     "uglify-es": "^3.3.9",
     "zlib": "^1.0.5"
   },
