--- a/ui/package.json
+++ b/ui/package.json
@@ -59,7 +59,7 @@
     "prismjs": "^1.22.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.0",
+    "@babel/core": "^7.12.3",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^15.1.0",
@@ -68,7 +68,7 @@
     "@rollup/plugin-legacy": "^2.0.0",
     "@rollup/plugin-multi-entry": "^4.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-preset-env": "^1.7.0",
     "chalk": "^4.1.0",
@@ -77,13 +77,13 @@
     "fs-extra": "^9.0.1",
     "node-sass": "^4.14.1",
     "open": "^7.3.0",
-    "postcss": "^7.0.32",
+    "postcss": "7.0.35",
     "postcss-rtl": "^1.7.3",
     "punycode": "^2.1.1",
     "quasar": "^1.14.1",
     "quasar-json-api": "^1.0.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.30.0",
+    "rollup": "^2.32.0",
     "uglify-es": "^3.3.9",
     "zlib": "^1.0.5"
   },
