--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quasar/quasar-ui-qmarkdown",
-  "version": "1.0.36",
+  "version": "1.1.0",
   "author": "Jeff Galbraith <jeff@quasar.dev>",
   "description": "Display inline markdown in your Quasar App",
   "license": "MIT",
@@ -62,12 +62,12 @@
     "@babel/core": "^7.12.3",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-inject": "^4.0.2",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-legacy": "^2.0.0",
     "@rollup/plugin-multi-entry": "^4.0.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-node-resolve": "^10.0.0",
     "autoprefixer": "9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-preset-env": "^1.7.0",
@@ -75,19 +75,20 @@
     "cssnano": "^4.1.10",
     "eslint-plugin-nodeca": "^1.0.3",
     "fs-extra": "^9.0.1",
-    "node-sass": "^4.14.1",
     "open": "^7.3.0",
     "postcss": "7.0.35",
     "postcss-rtl": "^1.7.3",
     "punycode": "^2.1.1",
-    "quasar": "^1.14.2",
-    "quasar-json-api": "^1.0.1",
+    "quasar": "^1.14.3",
+    "quasar-json-api": "^1.2.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.32.1",
+    "rollup": "^2.33.1",
+    "sass": "^1.29.0",
     "uglify-es": "^3.3.9",
     "zlib": "^1.0.5"
   },
   "browserslist": [
     "last 1 version, not dead, ie >= 11"
-  ]
+  ],
+  "typings": "dist/types/index.d.ts"
 }
