--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "module": "dist/index.esm.js",
   "main": "dist/index.common.js",
+  "typings": "dist/types/index.d.ts",
   "scripts": {
     "lint": "eslint --ext .js,.vue src",
     "lint-fix": "eslint --ext .js,.vue src --fix",
@@ -68,11 +69,20 @@
     "@rollup/plugin-legacy": "^2.0.0",
     "@rollup/plugin-multi-entry": "^4.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
+    "@vue/eslint-config-standard": "^5.1.2",
     "autoprefixer": "9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-preset-env": "^1.7.0",
     "chalk": "^4.1.0",
     "cssnano": "^4.1.10",
+    "eslint": "^7.13.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-quasar": "^1.0.0",
+    "eslint-plugin-standard": "^4.1.0",
+    "eslint-plugin-vue": "^7.1.0",
     "eslint-plugin-nodeca": "^1.0.3",
     "fs-extra": "^9.0.1",
     "open": "^7.3.0",
@@ -89,6 +99,5 @@
   },
   "browserslist": [
     "last 1 version, not dead, ie >= 11"
-  ],
-  "typings": "dist/types/index.d.ts"
+  ]
 }
