--- a/demo/package.json
+++ b/demo/package.json
@@ -26,16 +26,16 @@
     "electron": "^11.0.2",
     "electron-debug": "^3.1.0",
     "electron-devtools-installer": "^3.1.1",
-    "eslint": "^7.13.0",
+    "eslint": "^7.14.0",
     "eslint-config-standard": "^16.0.2",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-quasar": "^1.0.0",
     "eslint-plugin-standard": "^4.1.0",
     "eslint-plugin-vue": "^7.1.0",
-    "quasar-app-extension-example-viewer": "^1.0.4",
+    "eslint-webpack-plugin": "^2.4.0",
+    "quasar-app-extension-example-viewer": "^1.1.0",
     "quasar-app-extension-json-api-viewer": "^1.3.0",
     "raw-loader": "^4.0.2"
   },
@@ -45,6 +45,15 @@
     "yarn": ">= 1.21.1"
   },
   "browserslist": [
-    "last 1 version, not dead, ie >= 11"
+    "last 10 Chrome versions",
+    "last 10 Firefox versions",
+    "last 4 Edge versions",
+    "last 7 Safari versions",
+    "last 8 Android versions",
+    "last 8 ChromeAndroid versions",
+    "last 8 FirefoxAndroid versions",
+    "last 10 iOS versions",
+    "last 5 Opera versions",
+    "ie >= 11"
   ]
 }
