--- a/ui/package.json
+++ b/ui/package.json
@@ -79,11 +79,11 @@
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jsdoc": "^31.6.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-quasar": "^1.0.0",
     "eslint-plugin-vue": "^7.5.0",
-    "eslint-plugin-nodeca": "^1.0.3",
     "fs-extra": "^9.1.0",
     "open": "^7.4.0",
     "postcss": "8.2.4",
