chore: prep for Quasar v2

--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quasar/quasar-ui-qmarkdown",
-  "version": "1.4.1",
+  "version": "2.0.0-beta.1",
   "author": "Jeff Galbraith <jeff@quasar.dev>",
   "description": "Display inline markdown in your Quasar App",
   "license": "MIT",
@@ -10,12 +10,12 @@
   "scripts": {
     "lint": "eslint --ext .js,.vue src",
     "lint-fix": "eslint --ext .js,.vue src --fix",
-    "dev": "cd dev && yarn dev && cd ..",
+    "dev": "cd ../dev && yarn dev && cd ..",
     "dev:umd": "yarn build && node build/script.open-umd.js",
-    "dev:ssr": "cd dev && yarn 'dev:ssr' && cd ..",
-    "dev:ios": "cd dev && yarn 'dev:ios' && cd ..",
-    "dev:android": "cd dev && yarn 'dev:android' && cd ..",
-    "dev:electron": "cd dev && yarn 'dev:electron' && cd ..",
+    "dev:ssr": "cd ../dev && yarn 'dev:ssr' && cd ..",
+    "dev:ios": "cd ../dev && yarn 'dev:ios' && cd ..",
+    "dev:android": "cd ../dev && yarn 'dev:android' && cd ..",
+    "dev:electron": "cd ../dev && yarn 'dev:electron' && cd ..",
     "build": "node build/index.js",
     "build:js": "node build/script.javascript.js",
     "build:css": "node build/script.css.js",
@@ -88,7 +88,7 @@
     "open": "^7.4.0",
     "postcss": "8.2.4",
     "punycode": "^2.1.1",
-    "quasar": "^1.15.2",
+    "quasar": "^2.0.0-beta.1",
     "quasar-json-api": "^1.2.4",
     "rimraf": "^3.0.2",
     "rollup": "^2.38.5",
