--- a/docs/package.json
+++ b/docs/package.json
@@ -19,18 +19,18 @@
     "@datatraccorporation/markdown-it-mermaid": "^0.5.0",
     "@quasar/extras": "^1.10.7",
     "@quasar/quasar-ui-qmarkdown": "./ui",
-    "core-js": "^3.14.0",
-    "quasar": "^2.0.0-rc.2",
+    "core-js": "^3.15.0",
+    "quasar": "^2.0.0",
     "quasar-ui-example-viewer": "^2.0.0-alpha.6",
     "quasar-ui-json-api-viewer": "^2.0.0-alpha.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.5",
+    "@babel/core": "^7.14.6",
     "@babel/eslint-parser": "^7.14.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.14.5",
-    "@quasar/app": "^3.0.0-beta.22",
-    "eslint": "^7.28.0",
+    "@quasar/app": "^3.0.0",
+    "eslint": "^7.29.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
