--- a/ui/package.json
+++ b/ui/package.json
@@ -60,7 +60,7 @@
     "prismjs": "^1.23.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.5",
+    "@babel/core": "^7.14.6",
     "@babel/eslint-parser": "^7.14.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.14.5",
@@ -75,25 +75,25 @@
     "autoprefixer": "10.2.6",
     "chalk": "^4.1.1",
     "cssnano": "^5.0.6",
-    "eslint": "^7.28.0",
+    "eslint": "^7.29.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jest": "^24.3.6",
-    "eslint-plugin-jsdoc": "^35.2.0",
+    "eslint-plugin-jsdoc": "^35.4.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-quasar": "^1.0.0",
     "eslint-plugin-vue": "^7.11.1",
     "fs-extra": "^10.0.0",
-    "open": "^8.2.0",
-    "postcss": "8.3.4",
+    "open": "^8.2.1",
+    "postcss": "8.3.5",
     "punycode": "^2.1.1",
-    "quasar": "^2.0.0-beta.12",
+    "quasar": "^2.0.0",
     "quasar-json-api": "2.0.0-alpha.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.51.2",
+    "rollup": "^2.52.2",
     "rtlcss": "^3.2.0",
-    "sass": "^1.34.1",
+    "sass": "^1.35.1",
     "uglify-es": "^3.3.9",
     "zlib": "^1.0.5"
   },
