--- a/ui/package.json
+++ b/ui/package.json
@@ -73,6 +73,7 @@
     "@rollup/plugin-legacy": "^2.2.0",
     "@rollup/plugin-multi-entry": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
+    "@types/markdown-it": "^12.2.1",
     "autoprefixer": "10.3.4",
     "chalk": "^4.1.2",
     "cssnano": "^5.0.8",
