chore: update deps

--- a/docs/package.json
+++ b/docs/package.json
@@ -20,6 +20,15 @@
     "@quasar/extras": "^1.11.0",
     "@quasar/quasar-ui-qmarkdown": "./ui",
     "core-js": "^3.17.3",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-deflist": "^2.1.0",
+    "markdown-it-emoji": "^2.0.0",
+    "markdown-it-footnote": "^3.0.3",
+    "markdown-it-ins": "^3.0.1",
+    "markdown-it-mark": "^3.0.1",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
+    "markdown-it-task-lists": "^2.1.1",
     "quasar": "^2.1.0",
     "quasar-ui-example-viewer": "^2.0.0-alpha.6",
     "quasar-ui-json-api-viewer": "^2.0.0-alpha.6"
