--- a/ui/package.json
+++ b/ui/package.json
@@ -72,7 +72,6 @@
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-jsdoc": "^36.0.8",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
@@ -88,7 +87,7 @@
     "rollup": "^2.56.3",
     "rtlcss": "^3.3.0",
     "sass": "^1.39.0",
-    "uglify-es": "^3.3.9",
+    "uglify-js": "^3.14.2",
     "zlib": "^1.0.5"
   },
   "browserslist": [
