--- a/app-extension/package.json
+++ b/app-extension/package.json
@@ -33,6 +33,15 @@
   "dependencies": {
     "@quasar/quasar-ui-qmarkdown": "^2.0.0-alpha.7",
     "front-matter": "^4.0.2",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-deflist": "^2.1.0",
+    "markdown-it-emoji": "^2.0.0",
+    "markdown-it-footnote": "^3.0.3",
+    "markdown-it-ins": "^3.0.1",
+    "markdown-it-mark": "^3.0.1",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
+    "markdown-it-task-lists": "^2.1.1",
     "raw-loader": "^4.0.2",
     "ware-loader": "^0.2.4"
   }
