--- a/ui/package.json
+++ b/ui/package.json
@@ -46,48 +46,48 @@
     "attributes": "dist/vetur/attributes.json"
   },
   "dependencies": {
-    "markdown-it": "^12.2.0",
+    "markdown-it": "^12.3.0",
     "markdown-it-container": "^3.0.0",
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-toc-and-anchor": "^4.2.0",
     "prismjs": "^1.25.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/eslint-parser": "^7.15.7",
+    "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-env": "^7.16.4",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-commonjs": "^20.0.0",
-    "@rollup/plugin-inject": "^4.0.2",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-inject": "^4.0.3",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-legacy": "^2.2.0",
     "@rollup/plugin-multi-entry": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.5",
-    "@types/markdown-it": "^12.2.1",
-    "autoprefixer": "10.3.6",
-    "chalk": "^4.1.2",
-    "cssnano": "^5.0.8",
-    "eslint": "^7.32.0",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@types/markdown-it": "^12.2.3",
+    "autoprefixer": "10.4.0",
+    "chalk": "=4.1.2",
+    "cssnano": "^5.0.12",
+    "eslint": "^8.4.1",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsdoc": "^36.1.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsdoc": "^37.2.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-quasar": "^1.0.0",
-    "eslint-plugin-vue": "^7.18.0",
+    "eslint-plugin-vue": "^8.2.0",
     "fs-extra": "^10.0.0",
-    "open": "^8.2.1",
-    "postcss": "8.3.8",
+    "open": "^8.4.0",
+    "postcss": "8.4.4",
     "punycode": "^2.1.1",
-    "quasar": "^2.1.0",
+    "quasar": "^2.3.4",
     "quasar-json-api": "2.0.0-alpha.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.57.0",
-    "rtlcss": "^3.3.0",
-    "sass": "^1.42.1",
-    "uglify-js": "^3.14.2",
+    "rollup": "^2.61.0",
+    "rtlcss": "^3.5.0",
+    "sass": "^1.44.0",
+    "uglify-js": "^3.14.4",
     "zlib": "^1.0.5"
   },
   "browserslist": [
