chore: bump version => v2.0.0-beta.1

--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quasar/quasar-ui-qmarkdown",
-  "version": "2.0.0-alpha.9",
+  "version": "2.0.0-beta.1",
   "author": "Jeff Galbraith <jeff@quasar.dev>",
   "contributors": [
     {
