--- a/docs/package.json
+++ b/docs/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@datatraccorporation/markdown-it-mermaid": "^0.5.0",
-    "@quasar/extras": "^1.12.4",
+    "@quasar/extras": "^1.13.3",
     "@quasar/quasar-ui-qmarkdown": "./ui",
     "core-js": "^3.20.3",
     "markdown-it-abbr": "^1.0.4",
@@ -29,16 +29,18 @@
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
     "markdown-it-task-lists": "^2.1.1",
-    "quasar": "^2.4.11",
+    "quasar": "^2.6.1",
     "quasar-ui-example-viewer": "^2.0.0-alpha.9",
-    "quasar-ui-json-api-viewer": "^2.0.0-alpha.6"
+    "quasar-ui-json-api-viewer": "^2.0.0-alpha.6",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.10",
     "@babel/eslint-parser": "^7.16.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.16.11",
-    "@quasar/app": "^3.2.9",
+    "@quasar/app-webpack": "^3.4.4",
     "babel-loader": "8.2.3",
     "eslint": "^8.7.0",
     "eslint-config-standard": "^16.0.3",
