--- a/app-extension/package.json
+++ b/app-extension/package.json
@@ -41,8 +41,12 @@
     "markdown-it-mark": "^3.0.1",
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
-    "markdown-it-task-lists": "^2.1.1",
+    "markdown-it-task-lists": "^2.1.1"
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.17.0",
     "raw-loader": "^4.0.2",
-    "ware-loader": "^0.2.4"
+    "vite-raw-plugin": "^1.0.1",
+    "webpack-merge": "^5.8.0"
   }
 }
