--- a/docs/package.json
+++ b/docs/package.json
@@ -17,9 +17,9 @@
   },
   "dependencies": {
     "@datatraccorporation/markdown-it-mermaid": "^0.5.0",
-    "@quasar/extras": "^1.13.3",
+    "@quasar/extras": "^1.13.5",
     "@quasar/quasar-ui-qmarkdown": "./ui",
-    "core-js": "^3.20.3",
+    "core-js": "^3.21.1",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-deflist": "^2.1.0",
     "markdown-it-emoji": "^2.0.0",
@@ -29,25 +29,25 @@
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
     "markdown-it-task-lists": "^2.1.1",
-    "quasar": "^2.6.1",
+    "quasar": "^2.6.6",
     "quasar-ui-example-viewer": "^2.0.0-alpha.9",
     "quasar-ui-json-api-viewer": "^2.0.0-alpha.6",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue": "^3.2.32",
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.10",
-    "@babel/eslint-parser": "^7.16.5",
+    "@babel/core": "^7.17.9",
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.16.11",
-    "@quasar/app-webpack": "^3.4.4",
-    "babel-loader": "8.2.3",
-    "eslint": "^8.7.0",
+    "@quasar/app-webpack": "^3.5.1",
+    "babel-loader": "8.2.4",
+    "eslint": "^8.13.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^8.3.0",
+    "eslint-plugin-vue": "^8.6.0",
     "eslint-webpack-plugin": "^3.1.1",
     "gray-matter": "^4.0.3",
     "markdown-it": "^12.3.2",
@@ -62,10 +62,9 @@
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
     "markdown-it-task-lists": "^2.1.1",
-    "prismjs": "^1.26.0",
+    "prismjs": "^1.27.0",
     "raw-loader": "^4.0.2",
-    "toml": "^3.0.0",
-    "ware-loader": "^0.2.4"
+    "toml": "^3.0.0"
   },
   "browserslist": [
     "last 10 Chrome versions",
