--- a/ui/package.json
+++ b/ui/package.json
@@ -46,48 +46,49 @@
     "attributes": "dist/vetur/attributes.json"
   },
   "dependencies": {
+    "@types/markdown-it": "^12.2.3",
     "markdown-it": "^12.3.2",
     "markdown-it-container": "^3.0.0",
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-toc-and-anchor": "^4.2.0",
-    "prismjs": "^1.26.0"
+    "prismjs": "^1.27.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.10",
-    "@babel/eslint-parser": "^7.16.5",
+    "@babel/core": "^7.17.9",
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.16.11",
-    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-inject": "^4.0.4",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-legacy": "^2.2.0",
     "@rollup/plugin-multi-entry": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-node-resolve": "^13.2.0",
     "@types/markdown-it": "^12.2.3",
-    "autoprefixer": "10.4.2",
-    "chalk": "=4.1.2",
-    "cssnano": "^5.0.15",
-    "eslint": "^8.7.0",
+    "autoprefixer": "10.4.4",
+    "cssnano": "^5.1.7",
+    "eslint": "^8.13.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsdoc": "^37.6.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.2.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-quasar": "^1.1.0",
-    "eslint-plugin-vue": "^8.3.0",
-    "fs-extra": "^10.0.0",
+    "eslint-plugin-vue": "^8.6.0",
+    "fs-extra": "^10.0.1",
+    "kolorist": "^1.5.1",
     "open": "^8.4.0",
-    "postcss": "8.4.5",
+    "postcss": "8.4.12",
     "punycode": "^2.1.1",
-    "quasar": "^2.4.11",
+    "quasar": "^2.6.6",
     "quasar-json-api": "2.0.0-alpha.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.64.0",
+    "rollup": "^2.70.1",
     "rtlcss": "^3.5.0",
-    "sass": "^1.49.0",
-    "uglify-js": "^3.14.5",
+    "sass": "^1.50.0",
+    "uglify-js": "^3.15.4",
     "zlib": "^1.0.5"
   },
   "browserslist": [
