--- a/app-extension/package.json
+++ b/app-extension/package.json
@@ -41,11 +41,11 @@
     "markdown-it-mark": "^3.0.1",
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
-    "markdown-it-task-lists": "^2.1.1"
-  },
-  "devDependencies": {
-    "@babel/eslint-parser": "^7.17.0",
+    "markdown-it-task-lists": "^2.1.1",
     "raw-loader": "^4.0.2",
     "webpack-merge": "^5.8.0"
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.17.0"
   }
 }
