--- a/ui/package.json
+++ b/ui/package.json
@@ -47,47 +47,47 @@
   },
   "dependencies": {
     "@types/markdown-it": "^12.2.3",
-    "markdown-it": "^12.3.2",
+    "markdown-it": "^13.0.1",
     "markdown-it-container": "^3.0.0",
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-toc-and-anchor": "^4.2.0",
-    "prismjs": "^1.28.0"
+    "prismjs": "^1.29.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/eslint-parser": "^7.17.0",
+    "@babel/core": "^7.22.5",
+    "@babel/eslint-parser": "^7.22.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.16.11",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-commonjs": "^21.1.0",
-    "@rollup/plugin-inject": "^4.0.4",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-legacy": "^2.2.0",
-    "@rollup/plugin-multi-entry": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.2.1",
+    "@babel/preset-env": "^7.22.5",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-buble": "^1.0.2",
+    "@rollup/plugin-commonjs": "^25.0.1",
+    "@rollup/plugin-inject": "^5.0.3",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-legacy": "^3.0.1",
+    "@rollup/plugin-multi-entry": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.1.0",
     "@types/markdown-it": "^12.2.3",
-    "autoprefixer": "10.4.4",
-    "cssnano": "^5.1.7",
-    "eslint": "^8.13.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.2.5",
+    "autoprefixer": "^10.4.14",
+    "cssnano": "^6.0.1",
+    "eslint": "^8.42.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsdoc": "^46.2.6",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-quasar": "^1.1.0",
-    "eslint-plugin-vue": "^8.6.0",
-    "fs-extra": "^10.1.0",
-    "kolorist": "^1.5.1",
-    "open": "^8.4.0",
-    "postcss": "8.4.12",
-    "punycode": "^2.1.1",
-    "quasar-json-api": "2.0.0-alpha.2",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.70.2",
-    "rtlcss": "^3.5.0",
-    "sass": "^1.50.1",
-    "uglify-js": "^3.15.4",
+    "eslint-plugin-vue": "^9.14.1",
+    "fs-extra": "^11.1.1",
+    "kolorist": "^1.8.0",
+    "open": "^9.1.0",
+    "postcss": "^8.4.24",
+    "punycode": "^2.3.0",
+    "quasar-json-api": "2.0.0-alpha.3",
+    "rimraf": "^5.0.1",
+    "rollup": "^3.24.1",
+    "rtlcss": "^4.1.0",
+    "sass": "^1.63.3",
+    "uglify-js": "^3.17.4",
     "zlib": "^1.0.5"
   },
   "browserslist": [
